# octue-sdk-python

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  ATTRIBUTIONS.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  app.py  cloudbuild.yaml  mkdocs.yml  mkver.conf  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/scripts/: check_version_compatibility_tested.py
.github/workflows/: add-issues-to-octue-board.yml  build-docker-image.yml  check-version-consistency.yml  check-version.yml  python-ci.yml  release.yml  synced-add-issues-to-octue-board.yaml  test-build-docs.yml  test-workflow.yml  update-pull-request-description.yml  update-pull-request.yml  version-compatibility.yml
cloud_function/: main.py  requirements.txt
docs/: asking_questions.md  authentication.md  available_filters.md  contributing.md  creating.md  creating_apps.md  creating_services.md  datafile.md  dataset.md  deploying_services.md  downloading_datafiles.md  glossary.md  index.md  infrastructure.md  installation.md  inter_service_compatibility.md  license.md  logging.md  manifest.md  mkdocs.yml  requirements.txt  running_services_locally.md  services.md  support.md  troubleshooting_services.md  updating_services.md  version_history.md
docs/core_concepts/: asking_questions.md  creating_apps.md  creating_services.md  deploying_services.md  inter_service_compatibility.md  logging.md  running_services_locally.md  services.md  testing_services.md  troubleshooting_infrastructure.md  troubleshooting_services.md  twines.md  updating_services.md
docs/creating_services/: getting_started.md
docs/data_containers/: datafile.md  index.md
docs/docs/: asking_questions.md  creating_services.md  data_containers.md  deploying_services.md  index.md  installation.md  inter_service_compatibility.md  manifest.md  services.md  testing_services.md  version_history.md
docs/getting_started/: creating_services.md  managing_infrastructure.md  using_services.md
docs/managing_infrastructure/: getting_started.md
docs/source/: analysis_objects.rst  api.rst  asking_questions.rst  authentication.rst  available_filters.rst  child_services.rst  cloud_storage.rst  cloud_storage_advanced_usage.rst  conf.py  creating_apps.rst  creating_digital_twins.rst  creating_services.rst  data_containers.rst  datafile.rst  dataset.rst  deploying_services.rst  deploying_services_advanced.rst  downloading_datafiles.rst  filter_containers.rst  index.rst  installation.rst  inter_service_compatibility.rst  license.rst  logging.rst  manifest.rst  running_services_locally.rst  services.rst  testing_services.rst  troubleshooting_services.rst  updating_services.rst  version_history.rst
docs/twines/: anatomy_children.md  anatomy_credentials.md  anatomy_manifest.md  anatomy_values.md  examples.md
docs/using_services/: authentication.md  getting_started.md
examples/: __init__.py  example_config.json  example_manifest.json  figures.py  routines.py
oasys/: __init__.py  cli.py  exceptions.py  setup.py
octue/: __init__.py  app_loading.py  clear.py  cli.py  commands.py  compatibility.py  configuration.py  crash_diagnostics.py  definitions.py  diagnostics.py  exceptions.py  get.py  local.py  log_handlers.py  logging_handlers.py  remote.py  runner.py  setup.py  validation.py
octue/cloud/: __init__.py  credentials.py  emulators.py  registry.py  run.py  service_id.py  validation.py
octue/config/: __init__.py  config.py
octue/essentials/: monitor_messages.py
octue/manifest/: __init__.py  manifest.py
octue/metadata/: recorded_questions.jsonl  version_compatibilities.json
octue/migrations/: __init__.py  cloud_storage.py  manifest.py
octue/mixins/: __init__.py  base.py  cloud_pathable.py  cool_nameable.py  filterable.py  filteree.py  hashable.py  identifiable.py  labelable.py  loggable.py  metadata.py  pathable.py  serialisable.py  taggable.py
octue/resources/: __init__.py  analysis.py  child.py  data_file.py  datafile.py  dataset.py  filter_containers.py  filterset.py  label.py  manifest.py  server.py  service.py  service_backends.py  tag.py
octue/templates/: __init__.py  templates.py
octue/twined/: __init__.py  app_loading.py  compatibility.py  configuration.py  definitions.py  diagnostics.py  exceptions.py  log_handlers.py  runner.py  twine.py
octue/utils/: __init__.py  cleaning.py  colour.py  decoders.py  dictionaries.py  encoders.py  exceptions.py  files.py  folders.py  gen_uuid.py  isfile.py  isfolder.py  local_metadata.py  metadata.py  objects.py  patches.py  persistence.py  processes.py  strip_from_end.py  testing.py  threads.py  time.py
scripts/: check_twined_version_compatibility_tested.py  check_version_compatibility_tested.py  print_twined_version_compatibility_table.py  print_version_compatibility_table.py
scripts/check_inter_service_compatibility_across_versions/: record_question.py  record_questions_across_versions.py  utils.py
scripts/check_inter_service_compatibility_across_versions.py/: process_question.py  process_questions_across_versions.py  record_question.py  record_questions_across_versions.py
scripts/process_questions_across_versions/: process_question.py  process_questions_across_versions.py
scripts/record_questions_across_versions/: record_question.py
template-base/: requirements.txt  setup.py
templates/template-python-fractal/: app.py  twine.json
terraform/: .terraform.lock.hcl  artifact_registry.tf  bigquery.tf  functions.tf  iam.tf  iam_service_accounts.tf  main.tf  outputs.tf  pub_sub.tf  variables.tf
tests/: __init__.py  app.py  base.py  emulators.py  mocks.py  test_analysis.py  test_cli.py  test_compatibility.py  test_datafile.py  test_dataset.py  test_diagnostics.py  test_identifiable.py  test_log_handlers.py  test_loggable.py  test_logging_handlers.py  test_runner.py  test_serialisable.py  test_taggable.py  test_templates.py  test_validation.py
(+413 files in other folders)
